change code vov

--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,18 @@
 envlist = py36
 
 [testenv]
-deps =
-    yapf
-    pytest
-    bytecode==0.7.0
-    Redy
-    rbnf>=0.3.21
-    wisepy
-    flake8
+deps = -requirements.txt
+
+[travis]
+python =
+    3.6: py36, flake8
+
+[flake8]
+exclude =
+    .git,
+    .tox,
+    build,
+    dist
 
 commands =
     python -m pytest
