--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install tox-travis
+  - pip install codecov
 script:
-  tox
+  - tox
+
+after_success:
+  - codecov
