--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@
 envlist = py36
 
 [testenv]
-deps = -r requirements.txt
+deps =
+    - -r requirements.txt
+    - codecov
 
 [travis]
 python =
@@ -21,4 +23,6 @@ exclude =
     dist
 
 commands =
-    python -m pytest
+    - python -m pytest
+    - py.test --cov=./
+    - codecov
