fix tox and travis

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ envlist = py36
 
 [testenv]
 deps =
-    - -r requirements.txt
-    - codecov
+    -r requirements.txt
+    codecov
 
 [travis]
 python =
