--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,15 @@
 
 [tox]
 envlist = py36
-CODECOV_TOKEN = "822f86c3-65e2-40dd-b532-ee39861188d4"
 
 [testenv]
+setenv =
+    CODECOV_TOKEN="822f86c3-65e2-40dd-b532-ee39861188d4"
 deps =
     -r requirements.txt
+    codecov
+commands =
+    python -m pytest
     codecov
 
 [travis]
@@ -23,7 +27,3 @@ exclude =
     build,
     dist
 
-commands =
-    - python -m pytest
-    - py.test --cov=./
-    - codecov
