--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = py36
 
 [testenv]
 setenv =
-    CODECOV_TOKEN="822f86c3-65e2-40dd-b532-ee39861188d4"
+    CODECOV_TOKEN=822f86c3-65e2-40dd-b532-ee39861188d4
 deps =
     -r requirements.txt
     codecov
