--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@
 envlist = py36
 
 [testenv]
+passenv = CI TRAVIS TRAVIS_*
 setenv =
     CODECOV_TOKEN=822f86c3-65e2-40dd-b532-ee39861188d4
 deps =
@@ -14,6 +15,7 @@ deps =
     codecov
 commands =
     python -m pytest
+    coverage combine
     codecov
 
 [travis]
