--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
     codecov
 commands =
     python -m pytest
-    codecov
+    codecov --token=822f86c3-65e2-40dd-b532-ee39861188d4
 
 [travis]
 python =
