--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,8 @@ deps =
     -r requirements.txt
     codecov
 commands =
-    python -m pytest
+    coverage run auto_test.py
+    codecov --token=822f86c3-65e2-40dd-b532-ee39861188d4
 
 [travis]
 python =
