--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 sudo: false
 language: python
-python:
-  - "3.6"
+
+matrix:
+  include:
+  - python: 3.6
+    env: TOXENV=py36
+  - python: 3.7
+    env: TOXENV=py37
+
 install:
   - pip install -r requirements.txt
   - pip install codecov
