py37 continuous-integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ matrix:
 
 install:
   - pip install -r requirements.txt
-  - pip install codecov
+  - pip install codecov python_coveralls
 script:
   - tox
 after_success:
   - codecov --token=822f86c3-65e2-40dd-b532-ee39861188d4
+  - coveralls
