--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36
+envlist = py37, py36
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -13,10 +13,12 @@ deps =
     codecov
 commands =
     coverage run auto_test.py
+    coverage report --omit=./yapypy/utils/*
 
 [travis]
 python =
     3.6: py36, flake8
+    3.7: py37, flake8
 
 [flake8]
 exclude =
