add tox command

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,11 @@ commands =
     coverage run auto_test.py
     coverage report --omit=./yapypy/utils/*
 
+# run 'tox -eyapf'
+[testenv:yapf]
+commands =
+     yapf --style=.style.yapf --recursive --verbose yapypy/ --in-place
+
 [travis]
 python =
     3.6: py36, flake8
