--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37, py36
+envlist = py36, py37-dev
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
