--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36, py37-dev
+envlist = py36, py37
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -12,6 +12,7 @@ deps =
     -r requirements.txt
     codecov
 commands =
+    coverage erase
     coverage run auto_test.py
     coverage report --omit=./yapypy/utils/*
 
