--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
-sudo: false
 language: python
-
+sudo: required
+dist: xenial
+python:
+  - 3.6
+  - 3.7
 matrix:
   include:
   - python: 3.6
     env: TOXENV=py36
   - python: 3.7
+    dist: xenial
+    sudo: required
     env: TOXENV=py37
 
 install:
