--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: python
-sudo: required
-dist: xenial
-python:
-  - 3.6
-  - 3.7
+sudo: false
+cache: pip
 matrix:
   include:
   - python: 3.6
@@ -19,5 +16,5 @@ install:
 script:
   - tox
 after_success:
-  - codecov --token=822f86c3-65e2-40dd-b532-ee39861188d4
+  - codecov
   - coveralls
