--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py37, py36
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
+passenv = TOXENV CI TRAVIS TRAVIS_*
 deps =
     -r requirements.txt
     codecov
