--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     codecov
 commands =
     coverage run auto_test.py
-    coverage report --omit=./yapypy/utils/*
+    coverage report
 
 # run 'tox -eyapf'
 [testenv:yapf]
