--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36, py37
+envlist = py36, py37, py38-dev
 
 [testenv]
 passenv = TOXENV CI TRAVIS TRAVIS_*
@@ -24,6 +24,7 @@ commands =
 python =
     3.6: py36, flake8
     3.7: py37, flake8
+    3.8-dev: py38, flake8
 
 [flake8]
 exclude =
